[package]
name = "rust-kvstore-bench"
version = "0.1.0"
authors = ["quake wang <quake.wang@gmail.com>"]
edition = "2018"

[dependencies]
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb" }
lmdb-zero = "0.4"
clap = "2.32"
rand = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.10"
serde_json = "1.0"
statrs = "0.10.0"

[dev-dependencies]
tempfile = "3.0"
